2003-06-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ifaddrs.c (netlink_receive): Minor
	optimization.

	* po/zh_CN.po: Update from translation team.

	* posix/getconf.c (main): Also recognize names without the
	__POSIX_ prefix.

	* elf/Makefile (CFLAGS-dl-lookup.c): Define.

2003-06-02  Bernd Schmidt  <bernds@redhat.com>

	* sysdeps/i386/fpu/bits/mathinline.h (sqrt, __sqrtl, ldexp,
	ldexpf, ldexpl): Only define if __FAST_MATH__.

2003-06-02  Richard C. Bilson  <rcbilson@plg.uwaterloo.ca>

	Replace hard-coded offsets into struct sigcontext with generated file.
	* sysdeps/unix/sysv/linux/ia64/sigcontext-offsets.sym: New file.
	* sysdeps/unix/sysv/linux/ia64/Makefile
	[$(subdir) = stdlib] (gen-as-const-headers): Add it.
	* sysdeps/unix/sysv/linux/ia64/ucontext_i.h: Include it instead of
	defining SC_* macros here.

2003-06-02  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/sched.h (CLONE_PID): Remove.

2003-06-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/dl-machine.h: Include <sysdep.h>.

2003-06-01  Ulrich Drepper  <drepper@redhat.com>

	* test-skeleton.c (main): Request getopt to not reorder the
	command line.

	* elf/Makefile (CFLAGS-dl-runtime.c): Define.

	* wcsmbs/wcpncpy.c (__wcpncpy): Fix broken implementation to match
	stpncpy.

2003-05-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/bits/sigaction.h (SA_NOCLDWAIT): Define.

2003-05-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_plt_conflict):
	New function.
	(elf_machine_rela) <case R_PPC64_JMP_SLOT>: Avoid
	RESOLVE_CONFLICT_FIND_MAP.  If RESOLVE_CONFLICT_FIND_MAP is defined,
	call elf_machine_plt_conflict instead of elf_machine_fixup_plt.

2003-05-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/dl-machine.h (ELF_MACHINE_RUNTIME_TRAMPOLINE): Add
	CFI directives.

	* csu/Makefile: Fix Makefile warnings regarding Scrt1.o.
